--- a/imqr/inventory/templates/imqr/base.html
+++ b/imqr/inventory/templates/imqr/base.html
@@ -373,19 +373,27 @@
   <!-- Bootstrap core JavaScript-->
   <script src="/static/sbadmin/vendor/jquery/jquery.min.js"></script>
   <script src="/static/sbadmin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Core plugin JavaScript-->
+<script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>  <!-- Core plugin JavaScript-->
   <script src="/static/sbadmin/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
   <script src="/static/sbadmin/js/sb-admin-2.min.js"></script>
-
-  <!-- Page level plugins -->
-  <script src="/static/sbadmin/vendor/chart.js/Chart.min.js"></script>
-
-  <!-- Page level custom scripts -->
-  <script src="/static/sbadmin/js/demo/chart-area-demo.js"></script>
-  <script src="/static/sbadmin/js/demo/chart-pie-demo.js"></script>
+  
+<script type="text/javascript">
+      let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
+      scanner.addListener('scan', function (content) {
+        alert(content);
+      });
+      Instascan.Camera.getCameras().then(function (cameras) {
+        if (cameras.length > 0) {
+          scanner.start(cameras[0]);
+        } else {
+          console.error('No cameras found.');
+        }
+      }).catch(function (e) {
+        console.error(e);
+      });
+    </script>
 
 </body>
 
