--- a/imqr/inventory/templates/imqr/item_create_form.html
+++ b/imqr/inventory/templates/imqr/item_create_form.html
@@ -1,5 +1,4 @@
-{% extends 'imqr/base.html' %}
-{% comment %} <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -73,115 +72,4 @@
 
 
 <!--</script>-->
-</html> {% endcomment %}
-
-
-
-{% block body %}
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-xl-12 col-lg-7">
-      <div class="card shadow mb-4">
-        <!-- Card Header - Dropdown -->
-        <div
-          class="card-header text-center py-3 d-flex flex-row align-items-center justify-content-between"
-        >
-          <h6 class="m-0 font-weight-bold text-primary text-center">Create Item</h6>
-          
-        </div>
-        <!-- Card Body -->
-        <div class="card-body text-center">
-         <form class="user" method='POST'>
-                    {% csrf_token %}
-        <div class="form-group">
-            <label for="name">Product Name</label>
-            <input type="text" class="form-control" id="name" name="product_name"
-                   placeholder="Enter Product Name">
-        </div>
-        <div class="form-group">
-            <label for="Serial">Product Serial</label>
-            <input type="text" class="form-control" id="Serial" name="serial_number" value="{{serial_number}}" readonly>
-        </div>
-        <div class="form-group">
-            <label for="product_category">Select Category:</label>
-            <select class="form-control" id="product_category" name="category">
-                {% for category in product_category %}
-                <option value="{{category.category_id}}">{{category.category_name}}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="details">Details:</label>
-            <textarea class="form-control rounded-0" id="details" rows="5" name="details"></textarea>
-        </div>
-        <button type='submit' class="btn btn-primary">Submit</button>
-                  </form>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-
-
-
-
-{% comment %} <div class="container">
-
-    <!-- Outer Row -->
-    <div class="row justify-content-center">
-
-      <div class="col-xl-10 col-lg-12 col-md-9">
-
-        <div class="card o-hidden border-0 shadow-lg my-5">
-          <div class="card-body p-0">
-            <!-- Nested Row within Card Body -->
-            <div class="row">
-              <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-              <div class="col-lg-6">
-                <div class="p-5">
-                  <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
-                  </div>
-                  <form class="user">
-                    <div class="form-group">
-                      <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
-                    </div>
-                    <div class="form-group">
-                      <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                      <div class="custom-control custom-checkbox small">
-                        <input type="checkbox" class="custom-control-input" id="customCheck">
-                        <label class="custom-control-label" for="customCheck">Remember Me</label>
-                      </div>
-                    </div>
-                    <a href="index.html" class="btn btn-primary btn-user btn-block">
-                      Login
-                    </a>
-                    <hr>
-                    <a href="index.html" class="btn btn-google btn-user btn-block">
-                      <i class="fab fa-google fa-fw"></i> Login with Google
-                    </a>
-                    <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                      <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-                    </a>
-                  </form>
-                  <hr>
-                  <div class="text-center">
-                    <a class="small" href="forgot-password.html">Forgot Password?</a>
-                  </div>
-                  <div class="text-center">
-                    <a class="small" href="register.html">Create an Account!</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-
-  </div> {% endcomment %}
-{% endblock body %}
+</html>
