--- a/imqr/inventory/templates/imqr/scan.html
+++ b/imqr/inventory/templates/imqr/scan.html
@@ -31,8 +31,8 @@
           </div>
         </div>
         <!-- Card Body -->
-        <div class="card-body text-center">
-          <video id="preview" style='height:250px;width:200px;'></video>
+        <div class="card-body text-center embed-responsive embed-responsive-16by9">
+          <video id="preview" ></video>
         </div>
       </div>
     </div>
