--- a/imqr/inventory/templates/imqr/scan.html
+++ b/imqr/inventory/templates/imqr/scan.html
@@ -46,7 +46,7 @@
       let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
       scanner.addListener('scan', function (content) {
         console.log(content);
-        window.location.href="/item/create/?serial_number="+content+'/';
+        window.location.href="/item/create/?serial_number="+content;
       });
       Instascan.Camera.getCameras().then(function (cameras) {
         if (cameras.length > 0) {
