--- a/imqr/inventory/templates/imqr/item_detail.html
+++ b/imqr/inventory/templates/imqr/item_detail.html
@@ -15,6 +15,9 @@
         <div class="card-body text-center">
          <form class="user" method='POST'>
                     {% csrf_token %}
+          <div class="container-fluid">
+          <div class="qr"></div>
+          </div>
         <div class="form-group">
             <label for="name">Product Name</label>
             <input type="text" class="form-control" id="name" name="product_name"
@@ -87,18 +90,28 @@
       <div class="modal-footer">
       <div class="row">
       <div class="col-12">
-      <form method='POST' >
+      <form method='POST' action='/item/service/{{item.id}}/' >
+      {% csrf_token %}
       <div class="container ">
       <div class="form-group">
-            <input type="text" class="form-control" id="name" name="product_name"
-                   placeholder="Enter Details of services">
+            <input type="text" class="form-control" id="name" name="detail"
+                   placeholder="Enter Details of services" required>
         </div></div>
         </div>
         </div>
-        <button type="button" class="btn btn-primary">Update Service</button>
+        <button type="sumbit" class="btn btn-primary">Update Service</button>
        </form> 
       </div>
     </div>
   </div>
 </div>
 {% endblock body %}
+
+{% block script %}
+ <script>
+  $(document).ready(function () {
+       $('.qr').qrcode({ text:{{item.serial_number}}, size: 150});
+  });
+
+ </script>
+{% endblock script %}
