--- a/imqr/inventory/templates/imqr/scan.html
+++ b/imqr/inventory/templates/imqr/scan.html
@@ -43,14 +43,14 @@
 {% block script %}
   
 <script type="text/javascript">
-      let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
+      let scanner = new Instascan.Scanner({ video: document.getElementById('preview'),mirror: false });
       scanner.addListener('scan', function (content) {
         console.log(content);
         window.location.href="/item/create/?serial_number="+content;
       });
       Instascan.Camera.getCameras().then(function (cameras) {
         if (cameras.length > 0) {
-          scanner.start(cameras[0]);
+          scanner.start(cameras[1]);
         } else {
           console.error('No cameras found.');
         }
