--- a/imqr/inventory/templates/imqr/item_detail.html
+++ b/imqr/inventory/templates/imqr/item_detail.html
@@ -20,7 +20,7 @@
           </div>
         <div class="form-group">
             <label for="name">Product Name</label>
-            <input type="text" class="form-control" id="name" name="product_name"
+            <input type="text" class="form-control" id="nam" name="product_name"
                    placeholder="Enter Product Name" value={{item.name}} readonly>
         </div>
         <div class="form-group">
